tests/machine/x/pascal/load_yaml.error
line: 0
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/load_yaml.pas
load_yaml.pas(29,21) Warning: function result variable of a managed type does not seem to be initialized
load_yaml.pas(33,65) Error: Wrong number of parameters specified for call to "JSONToObject"
fpjsonrtti.pp(238,27) Error: Found declaration: JSONToObject(const UTF8String;TObject);
fpjsonrtti.pp(593,27) Error: Found declaration: JSONToObject(const TJSONObject;TObject);
load_yaml.pas(51,42) Fatal: illegal character "'"'" ($22)
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

